k8/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fighting-characters
  labels:
    app: fighting-characters
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fighting-characters
  template:
    metadata:
      labels:
        app: fighting-characters
    spec:
      terminationGracePeriodSeconds: 30

      # ממתין למונגו לפני שהאפליקציה עולה
      containers:
        - name: fighting-characters
          image: <will-be-set-by-CD>   # ה-CD עושה set image
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          startupProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 5
            failureThreshold: 30   # עד ~150s לאפשר לאפליקציה לעלות
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
