k8/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fighting-characters
  namespace: fighting-characters
  labels:
    app: fighting-characters
spec:
  type: ClusterIP
  selector:
    app: fighting-characters
  ports:
    - name: http
      port: 80
      targetPort: http
